# eventlog-live

./: .editorconfig  .gitignore  .hlint.yaml  CONTRIBUTING.md  OBSERVATIONS.md  README.md  build-cabal.sh  cabal.project  cabal.project.config  cabal.project.local.sample  cabal.project.profiling  fourmolu.yaml  ghc-influxdb.sh  shell.nix
IpeDb/: CHANGELOG.md  README.md  ipedb.cabal
IpeDb/app/: Main.hs
IpeDb/src/GHC/Eventlog/: Index.hs  InfoProv.hs  Options.hs  Table.hs
demo-nix/: README.md  configuration.nix  default.nix  (+5 more)
ekg-eventlog-core/: CHANGELOG.md  ekg-eventlog-core.cabal
ekg-eventlog-core/src/System/Metrics/: Eventlog.hs
ekg-eventlog-influxdb/: CHANGELOG.md  ekg-eventlog-influxdb.cabal
ekg-eventlog-influxdb/app/: Main.hs
ekg-eventlog-influxdb/src/System/Metrics/: InfluxDB.hs
ekg-eventlog-shim/: CHANGELOG.md  ekg-eventlog-shim.cabal
eventlog-counters/: LICENSE  eventlog-counters.cabal
eventlog-counters-ekg/: eventlog-counters-ekg.cabal
eventlog-counters-ekg/src/GHC/Eventlog/Counters/: EKG.hs
eventlog-counters/src/GHC/Eventlog/: Counters.hs
eventlog-influxdb/: TODO.md  eventlog-influxdb.cabal
eventlog-influxdb/app/: Main.hs
eventlog-live/: CHANGELOG.md  LICENSE  NOTES.md  README.md  eventlog-live.cabal
eventlog-live-influxdb/: CHANGELOG.md  LICENSE  NOTES.md  README.md  eventlog-live-influxdb.cabal
eventlog-live-influxdb/app/: Main.hs
eventlog-live-influxdb/src/GHC/Eventlog/Live/: InfluxDB.hs
eventlog-live-otelcol/: CHANGELOG.md  LICENSE  NOTES.md  README.md  eventlog-live-otelcol.cabal
eventlog-live-otelcol/app/: Main.hs
eventlog-live-otelcol/data/: config.schema.json  default.yaml
eventlog-live-otelcol/src-compat/OpenTelemetry/Trace/: Compat.hs
eventlog-live-otelcol/src/Data/Machine/Concurrent/: Compat.hs
eventlog-live-otelcol/src/Data/Machine/Concurrent/Compat/: AsyncStep.hs  Scatter.hs  Wye.hs
eventlog-live-otelcol/src/GHC/Debug/Stub/: Compat.hs
eventlog-live-otelcol/src/GHC/Eventlog/Live/: Otelcol.hs
eventlog-live-otelcol/src/GHC/Eventlog/Live/Otelcol/: Config.hs  Control.hs  Exporter.hs  Options.hs  Stats.hs
eventlog-live-otelcol/src/GHC/Eventlog/Live/Otelcol/Config/: Default.hs  Types.hs
eventlog-live-otelcol/src/GHC/Eventlog/Live/Otelcol/Exporter/: Logs.hs  Metrics.hs  Profiles.hs  Traces.hs
eventlog-live-otelcol/src/GHC/Eventlog/Live/Otelcol/Processor/: Heap.hs  Logs.hs  Profiles.hs  Threads.hs
eventlog-live-otelcol/src/GHC/Eventlog/Socket/: Compat.hs
eventlog-live-otelcol/src/Language/Haskell/TH/Lift/: Compat.hs
eventlog-live-otelcol/src/Options/Applicative/: Compat.hs
eventlog-live-otelcol/src/Options/Applicative/Extra/: Feature.hs
eventlog-live-otelcol/src/System/Random/: Compat.hs
eventlog-live-tests/: CHANGELOG.md  eventlog-live-tests.cabal
eventlog-live-tests/src/GHC/Eventlog/Live/: Test.hs
eventlog-live-tests/tests/: Main.hs
eventlog-live/app-influxdb/: Main.hs
eventlog-live/app-otelcol/: Main.hs
eventlog-live/src-lens/GHC/Eventlog/Live/: Lens.hs
eventlog-live/src-logger/GHC/Eventlog/Live/Internal/: Logger.hs
eventlog-live/src-machines/GHC/Eventlog/Live/: Machine.hs  Machines.hs  Verbosity.hs
eventlog-live/src-machines/GHC/Eventlog/Live/Data/: Span.hs
eventlog-live/src-machines/GHC/Eventlog/Live/Internal/: Logger.hs
eventlog-live/src-machines/GHC/Eventlog/Live/Machine/: Core.hs  Decoder.hs  Sink.hs
eventlog-live/src-machines/GHC/Eventlog/Live/Machine/Analysis/: Capability.hs
eventlog-live/src-options/GHC/Eventlog/Live/: Options.hs
eventlog-live/src-socket/GHC/Eventlog/Live/: Socket.hs
eventlog-live/src/GHC/Eventlog/: Live.hs
eventlog-live/src/GHC/Eventlog/Live/: Logger.hs  Machine.hs  Options.hs  Socket.hs  Source.hs
eventlog-live/src/GHC/Eventlog/Live/Data/: Attribute.hs  Group.hs  HeapProfBreakdown.hs  InfoProv.hs  LogRecord.hs  Metric.hs  Severity.hs  SrcLoc.hs
eventlog-live/src/GHC/Eventlog/Live/Internal/: Logger.hs
eventlog-live/src/GHC/Eventlog/Live/Machine/: Core.hs  Decoder.hs  Source.hs  WithStartTime.hs
eventlog-live/src/GHC/Eventlog/Live/Source/: Core.hs
eventlog-machines/: eventlog-machines.cabal
eventlog-machines/src/GHC/Eventlog/: Machines.hs
eventlog-recv/: eventlog-recv.cabal
eventlog-recv/src/: Main.hs
examples/collatzer/: README.md  collatzer.cabal
examples/collatzer/app/: Main.hs
examples/collatzer/src-counters-ekg/GHC/Eventlog/Counters/: EKG.hs
examples/collatzer/src-counters/GHC/Eventlog/: Counters.hs
examples/dumper/: README.md  dumper.cabal
examples/dumper/app/: Main.hs
examples/ecosim/: LICENSE  ecosim-otelcol-config-with-ipedb.sh  ecosim-otelcol-config.sh  ecosim-otelcol-config.yaml  ecosim.cabal
examples/ecosim/app/: Main.hs
examples/fibber/: LICENSE  README.md  fibber-collatzer.sh  fibber-dumper-profiling.sh  fibber-dumper.sh  fibber-ghc-eventlog-recv.sh  fibber-ghc-events-show.sh  fibber.cabal
examples/fibber/app/: Main.hs
examples/jumpy-jump/: LICENSE  README.md  jumpy-jump-otelcol-config.yaml  jumpy-jump-otelcol-with-cost-centre-profiler.sh  jumpy-jump-otelcol-with-ghc-stack-profiler.sh  jumpy-jump-with-cost-centre-profiler-otelcol-config.sh  jumpy-jump-with-ghc-stack-profiler-otelcol-config.sh  jumpy-jump.cabal
examples/jumpy-jump/app/: Main.hs
examples/oddball/: README.md  oddball-collatzer.sh  oddball-dumper.sh  oddball-eventlog-print.sh  oddball-eventlog-recv.sh  oddball-influxdb-profiling.sh  oddball-influxdb-stdin.sh  oddball-influxdb.sh  oddball-otelcol-config.sh  oddball-otelcol-config.yaml  oddball-otelcol-hT.sh  oddball-otelcol-hi.sh  oddball-otelcol-stats.sh  oddball-otelcol-with-hT.sh  oddball-otelcol-with-hi.sh  oddball-otelcol-with-inet.sh  oddball-otelcol.sh  oddball.cabal
examples/oddball/app/: Main.hs
examples/parfib/: README.md  parfib-influxdb.sh  parfib.cabal
examples/parfib/app/: Main.hs
examples/spectral-norm/: README.md  spectral-norm-dumper.sh  spectral-norm-influxdb.sh  spectral-norm-otelcol-config.sh  spectral-norm-otelcol.sh  spectral-norm.cabal
examples/spectral-norm/app/: Main.hs
examples/spectral-norm/cbits/: main.c
test/: Main.hs  test.cabal
(+146 files in other folders)
