cabal-version: 3.6
name: ipedb
version: 0.1.0.0
license: NONE
author: fendor
maintainer: fendor@posteo.de
build-type: Simple
extra-doc-files: CHANGELOG.md

common warnings
  ghc-options:
    -Wall
    -Wunused-packages

common exts
  default-extensions:
    LambdaCase
    NoFieldSelectors
    OverloadedRecordDot
    TypeApplications
    DerivingStrategies
    GeneralizedNewtypeDeriving
    NamedFieldPuns
    BangPatterns
    DeriveAnyClass
    DeriveGeneric

library
  import: warnings, exts
  exposed-modules:
    GHC.Eventlog.Index
    GHC.Eventlog.Table
    GHC.Eventlog.InfoProv

  build-depends:
    base,
    bytestring,
    directory,
    filepath,
    containers,
    ghc-events,
    machines,
    text,
    binary,
    sqlite-simple,
  hs-source-dirs: src
  default-language: Haskell2010

executable ipedb
  import: warnings
  main-is: Main.hs
  build-depends:
    base ^>=4.20.2.0,
    ipedb,

  hs-source-dirs: app
  default-language: Haskell2010

test-suite ipedb-test
  import: warnings
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
  build-depends:
    base ^>=4.20.2.0,
    eventlog-splittable-ipe
