cabal-version:       2.4
synopsis: Read an eventlog from a socket and place the results into an EKG store
description: Read an eventlog from a socket and place the results into an EKG store.
name:                ekg-eventlog-core
version:             0.1.0.0
author:              Matthew Pickering
maintainer:          matthewtpickering@gmail.com
build-type:          Simple
extra-doc-files:  CHANGELOG.md
license:  BSD-3-Clause
tested-with: GHC==9.2.7
category: Debug, Monitoring, System, Network

source-repository head
  type:     git
  location: https://github.com/well-typed/eventlog-live.git
  subdir:   ekg-eventlog-core

library
  exposed-modules:
      System.Metrics.Eventlog
  build-depends:
      base >=4.13 && <5,
      async                >= 2.2.4 && < 2.3,
      bytestring           >= 0.11.4 && < 0.12,
      containers           >= 0.6.5 && < 0.7,
      text                 >= 1.2.5 && < 1.3,
      ekg-core             >= 0.1.1 && < 0.2,
      ghc-events           >= 0.19.0 && < 0.20,
      network              >= 3.1.2 && < 3.2,
      time                 >= 1.11.1 && < 1.12,
      temporary            >= 1.3 && < 1.4,
  hs-source-dirs:
      src
  default-language:
      Haskell2010

