cabal-version:       2.4
synopsis:            Read an eventlog from a socket and place the results in an Influx database
description:         Read an eventlog from a socket and place the results in an Influx database
name:                ekg-eventlog-influxdb
version:             0.1.0.0
author:              Matthew Pickering
maintainer:          matthewtpickering@gmail.com
extra-source-files:  CHANGELOG.md
license: BSD-3-Clause
tested-with: GHC==9.2.7

source-repository head
  type:     git
  location: https://github.com/well-typed/eventlog-live.git
  subdir:   ekg-eventlog-influxdb

library
  exposed-modules:
      System.Metrics.InfluxDB
  build-depends:
      base >=4.16.0.0 && < 5,
      async                         >= 2.2.4 && < 2.3,
      containers                    >= 0.6.5 && < 0.7,
      stm                           >= 2.5.0 && < 2.6,
      influxdb                      >= 1.9.2 && < 1.10,
      time                          >= 1.11.1 && < 1.12,
      lens                          >= 5.1.1 && < 5.2,
      ekg-eventlog-core == 0.1.0.0
  hs-source-dirs:
      src
  default-language:
      Haskell2010

