cabal-version: 2.4
name:          ekg-eventlog-influxdb
version:       0.1.0.0
synopsis:      Transfer events into InfluxDB.
description:   Transfer events from an eventlog socket into InfluxDB.
author:        Matthew Pickering, Finley McIlwaine
maintainer:    matthewtpickering@gmail.com
copyright:     (c) 2021-2023 Well-Typed
license:       BSD-3-Clause
license-file:  LICENSE
category:      Debug, Monitoring, System, Network
tested-with:
  GHC ==9.2.8
   || ==9.4.8
   || ==9.6.7
   || ==9.8.4
   || ==9.10.2
   || ==9.12.2

source-repository head
  type:     git
  location: https://github.com/well-typed/eventlog-live.git
  subdir:   ekg-eventlog-influxdb

library
  hs-source-dirs:   src
  default-language: Haskell2010
  exposed-modules:  System.Metrics.InfluxDB
  build-depends:
    , async              >=2.2.4    && <2.3
    , base               >=4.16.0.0 && <5
    , containers         >=0.6.5    && <0.8
    , ekg-eventlog-core
    , influxdb           >=1.9.2    && <1.10
    , lens               >=5.1.1    && <5.4
    , stm                >=2.5.0    && <2.6
    , time               >=1.11.1   && <1.12

executable ekg-eventlog-influxdb
  hs-source-dirs:   app
  default-language: Haskell2010
  ghc-options:      -Wall -threaded
  main-is:          Main.hs
  build-depends:
    , async                  >=2.2.4    && <2.3
    , base                   >=4.16.0.0 && <5
    , ekg-eventlog-core
    , ekg-eventlog-influxdb
    , influxdb               >=1.9.2    && <1.10
    , lens                   >=5.1.1    && <5.4
