cabal-version:       >=1.10
name:                ekg-eventlog-shim
version:             0.1.0.0
author:              Matthew Pickering
maintainer:          matthewtpickering@gmail.com
build-type:          Simple
extra-source-files:  CHANGELOG.md

library
  exposed-modules:
      System.Metrics
      System.Metrics.Counter
      System.Metrics.Distribution
      System.Metrics.Distribution.Internal
      System.Metrics.Gauge
      System.Metrics.Label
  build-depends:
      base >=4.13 && <4.14
  default-language:
      Haskell2010
