cabal-version:      2.4
name:               eventlog-counters-ekg
version:            0.1.0.0
synopsis:           write me
description:        write me too
license:            BSD-3-Clause
license-file:       LICENSE
author:             Matthew Pickering
maintainer:         matthewtpickering@gmail.com
copyright:          (c) 2021 someone
category:           Debug, Monitoring, System, Network
build-type:         Simple
tested-with: GHC==9.2.7

library
  ghc-options: -Wall
  hs-source-dirs:   src/
  default-language: Haskell2010

  build-depends:
    , base        >=4.13   && <5
    , text
    , stm
    , ekg-core
    , eventlog-counters

  exposed-modules:
    GHC.Eventlog.Counters.EKG
