cabal-version: 2.4
name:          eventlog-counters-ekg
version:       0.1.0.0
synopsis:      write me
description:   write me too
license:       BSD-3-Clause
license-file:  LICENSE
author:        Matthew Pickering
maintainer:    matthewtpickering@gmail.com
copyright:     (c) 2021 someone
category:      Debug, Monitoring, System, Network
build-type:    Simple
tested-with:
  GHC ==9.2.8
   || ==9.4.8
   || ==9.6.7
   || ==9.8.4
   || ==9.10.2
   || ==9.12.2

library
  ghc-options:      -Wall
  hs-source-dirs:   src/
  default-language: Haskell2010
  exposed-modules:  GHC.Eventlog.Counters.EKG
  build-depends:
    , base               >=4.13 && <5
    , ekg-core
    , eventlog-counters
    , stm
    , text
