cabal-version: 2.4
name:          eventlog-counters
version:       0.1.0.0
synopsis:      Counters for eventlog.
description:
  Counters for eventlog, primarily meant for the live monitoring.

license:       BSD-3-Clause
license-file:  LICENSE
author:        Matthew Pickering, Oleg Grenrus <oleg.grenrus@iki.fi>
maintainer:    Not me.
category:      Debug, Monitoring, System

source-repository head
  type:     git
  location: https://github.com/mpickering/eventlog-counters.git
  subdir:   eventlog-counters

library
  ghc-options:      -Wall
  hs-source-dirs:   src/
  default-language: Haskell2010
  build-depends:
    , base             >=4.13   && <5
    , containers
    , ghc-events       ^>=0.17.0
    , ghc-events2prof  ^>=0.1
    , stm

  exposed-modules:  GHC.Eventlog.Counters
