cabal-version: 2.4
name:          eventlog-counters
version:       0.1.0.0
synopsis:      Counters for eventlog.
description:   Counters for eventlog for live monitoring.
author:        Matthew Pickering, Oleg Grenrus <oleg.grenrus@iki.fi>
maintainer:    Matthew Pickering <matthew@well-typed.com>
copyright:     (c) 2021 Well-Typed
license:       BSD-3-Clause
license-file:  LICENSE
category:      Debug, Monitoring, System
tested-with:
  GHC ==9.2.8
   || ==9.4.8
   || ==9.6.7
   || ==9.8.4
   || ==9.10.2
   || ==9.12.2

source-repository head
  type:     git
  location: https://github.com/well-typed/eventlog-counters.git
  subdir:   eventlog-counters

library
  ghc-options:      -Wall
  hs-source-dirs:   src/
  default-language: Haskell2010
  exposed-modules:  GHC.Eventlog.Counters
  build-depends:
    , base        >=4.13   && <5
    , containers
    , ghc-events  >=0.17.0
    , stm
