cabal-version: 3.0
name:          eventlog-influxdb
version:       0.1.0.0
license:       AGPL-3.0-only
license-file:  LICENSE
author:        Wen Kokke
maintainer:    wen@well-typed.com
copyright:     (c) 2025 Well-Typed
build-type:    Simple

common language
  ghc-options:      -Wall
  default-language: Haskell2010

executable eventlog-influxdb
  import:         language
  main-is:        Main.hs
  hs-source-dirs: app
  build-depends:
    , base
    , bytestring
    , clock
    , containers
    , eventlog-machines
    , ghc-events
    , influxdb
    , lens
    , machines
    , network
    , optparse-applicative
    , text
    , time
    , transformers
