cabal-version: 3.12
name:          eventlog-live-influxdb
version:       0.1.0.0
synopsis:      Stream eventlog data into InfluxDB.
description:
  This executable supports live streaming of eventlog data into InfluxDB.

license:       AGPL-3.0-only
license-file:  LICENSE
author:        Wen Kokke
maintainer:    wen@well-typed.com
copyright:     (c) 2025 Well-Typed
build-type:    Simple
category:      Debug, Monitoring, System
tested-with:   GHC ==9.2.8 || ==9.4.8 || ==9.6.7 || ==9.8.4 || ==9.10.2

common language
  ghc-options:
    -Wall -Wcompat -Widentities -Wprepositive-qualified-module
    -Wredundant-constraints -Wunticked-promoted-constructors
    -Wunused-packages

  default-language:   Haskell2010
  default-extensions:
    BangPatterns
    DataKinds
    DeriveFoldable
    DeriveFunctor
    DeriveTraversable
    DerivingStrategies
    DuplicateRecordFields
    FlexibleContexts
    FlexibleInstances
    GADTs
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    NoFieldSelectors
    NumericUnderscores
    OverloadedRecordDot
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    TupleSections
    TypeApplications
    TypeFamilies

library
  import:          language
  hs-source-dirs:  src
  exposed-modules: GHC.Eventlog.Live.InfluxDB
  build-depends:
    , base                   >=4.16  && <4.21
    , clock                  >=0.8.4 && <0.9
    , containers             >=0.6   && <0.8
    , dlist                  >=1.0   && <1.1
    , eventlog-live          >=0.1   && <0.2
    , eventlog-live:options
    , eventlog-live:socket
    , ghc-events             >=0.20  && <0.21
    , influxdb               >=1.9.3 && <1.10
    , lens-family            >=2.1.3 && <2.2
    , machines               >=0.7.4 && <0.8
    , optparse-applicative   >=0.19  && <0.20
    , text                   >=1.2   && <2.2

executable eventlog-live-influxdb
  import:         language
  main-is:        Main.hs
  hs-source-dirs: app
  build-depends:  eventlog-live-influxdb
